objects/ssot__OtherEmissionFactorSetItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CalorificValueNumber__c</fullName>
        <label>Calorific Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CalorificValueUnitNameName__c</fullName>
        <label>Calorific Value Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Ch4EmissionFactorNumber__c</fullName>
        <label>CH4 Emissions Factor</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Ch4EmissionFactorUnit__c</fullName>
        <label>CH4 Emissions Factor Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Co2EmissionFactorNumber__c</fullName>
        <label>CO2 Emissions Factor</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Co2EmissionFactorUnit__c</fullName>
        <label>CO2 Emissions Factor Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalIdentifier__c</fullName>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FuelType__c</fullName>
        <label>Fuel Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Other Emissions Factor Set Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__N2oEmissionFactorNumber__c</fullName>
        <label>N2O Emissions Factor</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__N2oEmissionFactorUnit__c</fullName>
        <label>N2O Emissions Factor Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentEmissionFactorId__c</fullName>
        <label>Parent Emissions Factor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShouldLockDtastUpdtForRec__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Dataset Update For Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__SuppliedEmissionsFactorNumber__c</fullName>
        <label>Supplied CO2e Emissions Factor</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuppliedEmissionsFactorUnit__c</fullName>
        <label>Supplied CO2e Emissions Factor Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383589384_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OtherEmissionFactorSetItem_ParentEmi_rel</label>
        <referenceTo>ssot__OtherEmissionsFactorSet__dlm</referenceTo>
        <relationshipLabel>OtherEmissionFactorSetItem_ParentEmi_rel</relationshipLabel>
        <relationshipName>rel_1747383589384_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>